Touch up solution